# ghostqa

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SECURITY_ADVISORY.md  llms.txt  pyproject.toml  server.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agentic-approval.yml  ci.yml  pr-governance-gates.yml  publish.yml  triage.yml
.well-known/: agent.json
docs/: ci-integration.md  configuration.md  cost-guide.md  for-agents.md
examples/demo-app/: app.py
examples/demo-app/templates/: dashboard.html  homepage.html  signup.html
examples/journeys/: demo-onboarding.yaml  forgeos-onboarding.yaml
examples/personas/: alex-developer.yaml
examples/products/: demo.yaml  forgeos.yaml
schemas/: product.schema.json
src/ghostqa/: __init__.py  __main__.py  config.py  credentials.py
src/ghostqa/cli/: __init__.py  app.py  config_cmd.py  dashboard.py  init_cmd.py  install.py  report.py  run.py  validate.py
src/ghostqa/engine/: __init__.py  action_executor.py  ai_step_runner.py  api_runner.py  browser_runner.py  cost_tracker.py  mock_server.py  native_action_executor.py  native_app_runner.py  orchestrator.py  persona_agent.py  protocols.py  report_generator.py  sim_action_executor.py  simulator_runner.py
src/ghostqa/mcp/: __init__.py  __main__.py  server.py
src/ghostqa/viewer/: __init__.py  server.py
src/specterqa/: __init__.py  __main__.py  config.py  credentials.py  models.py
src/specterqa/cli/: __init__.py  app.py  config_cmd.py  dashboard.py  init_cmd.py  install.py  report.py  run.py  validate.py
src/specterqa/engine/: __init__.py  action_executor.py  ai_step_runner.py  api_runner.py  browser_runner.py  cost_tracker.py  mock_server.py  native_action_executor.py  native_app_runner.py  orchestrator.py  persona_agent.py  protocols.py  report_generator.py  sim_action_executor.py  (+1 more)
tests/: conftest.py  test_cli_init.py  test_config.py  test_cost_tracker.py  test_credentials.py  test_mcp_server.py  test_models.py  test_report_generator.py
(+14 files in other folders)
